--- a/Question.html
+++ b/Question.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Question</title>
     <link href="./resource/css/questionStyle.css" type="text/css" rel="stylesheet">
-    <script src="./controQuestion.js"></script>
+
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                     <img src="./resource/clock.png" alt="Smiley face" height="42" width="42">
                 </div>
                 <div class="column is-3 box borderBox">
-                    <label id="timeGame" class="font is-2"> 5:00 </label>
+                    <label id="timeGame" class="font is-2"> 05:00 </label>
                 </div>
             </div>
             <div class="columns">
@@ -26,12 +26,12 @@
                     <img src="./resource/star.png" alt="Smiley face" height="42" width="42">
                 </div>
                 <div class="column is-3 box borderBox">
-                    <label class="font is-2"> 0 </label>
+                    <label id="GameScore" class="font is-2"> 0 </label>
                 </div>
             </div>
         </div>
         <div class="column is-4 fontStyle">
-            <lable style="margin-left: 26%" class="font is-4"> โจทย์ปัญหาพาคิด</lable>
+            <lable style="margin-left: 27%" class="font is-4"> โจทย์ปัญหาพาคิด</lable>
         </div>
         <div class="column is-1" style="margin-left: 11%">
             <div class="columns">
@@ -39,39 +39,39 @@
                     <img src="./resource/heart.png" alt="Smiley face" height="42" width="42">
                 </div>
                 <div class="column is-2 box borderBox">
-                    <label class="font is-2"> 0 </label>
+                    <label id="GameHeart" class="font is-2"> 3 </label>
                 </div>
             </div>
         </div>
     </div>
-    <div class="columns">
-        <div class="fontStyle question">
+    <div class="columns center " style="margin-top:2%">
+        <div class="column is-7 fontStyle question center">
             <center>
-                <img style="display:none" src="./resource/04.PNG" alt="Smiley face" height="240" width="500">
-            </center>
-            <lable class="font is-3" class="h2 is-1"> แผนภูมิรูปภาพแสดงการชมรายการทอล็คโชว์
-                ของสถานีโทรทัศน์ในเดือนมกราคม ปี พ.ศ. 2538
-                ถ้า A,B,C,D แทนรายการเรื่องหนึ่ง ๆ โดยผู้ชมที่ดูรายการ A มีจำนวนผู้ชมมากกว่ารายการ B
-                จำนวนผู้ชมรายการ B มีน้อยกว่ารายการ D
-                และจำนวนผู้ชมรายการ B และ C มีจำนวนผู้ชมเท่ากัน ถ้ารายการ D มีจำนวนผู้ชมมากที่สุด
-                รายการ A คือรายการอะไร</lable>
-            <p id="demo"></p>
+                <img id="imgGame" class="deplay-none" src="./resource/04.PNG" alt="Smiley face" height="360"
+                    width="650"><br><br><br>
+            <lable id="proposition" class="font is-3"> </lable>
+        </center>
         </div>
     </div>
-    <div class="columns fontStyle">
+    <div class="columns fontStyle" style="margin-top:3%">
         <div class="column is-4">
             <center>
-                <button class="button is-round is-orange"> ทไวไลท์โชว์</button><br><br>
-                <button class="button is-round is-orange"> จันทร์กระพริบ</button>
+                <button id="choice1" class="button is-round is-orange" value="choice1" onclick="selectAns(this.value)">
+                </button><br><br><br><br><br><br>
+                <button id="choice2" class="button is-round is-orange" value="choice2" onclick="selectAns(this.value)">
+                </button>
             </center>
         </div>
         <div class="column is-4">
             <center>
-                <button class="button is-round is-orange"> สี่ทุ่มสแควร์</button><br><br>
-                <button class="button is-round is-orange"> เจาะใจ</button>
+                <button id="choice3" class="button is-round is-orange" value="choice3" onclick="selectAns(this.value)">
+                </button><br><br><br><br><br><br>
+                <button id="choice4" class="button is-round is-orange" value="choice4" onclick="selectAns(this.value)">
+                </button>
             </center>
         </div>
     </div>
 </body>
+<script src="./resource/js/controQuestion.js"></script>
 
 </html>
