add text levelGame

--- a/Question.html
+++ b/Question.html
@@ -48,6 +48,11 @@
                         <label id="GameHeart" class="font is-2"> 3 </label>
                     </div>
                 </div>
+                <div class="columns">
+                    <div>
+                        <label id="levelGame" class="font is-2"> ด่านที่ 1 / 10 </label>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="columns" style="margin-top:2%">
