--- a/selectGame.html
+++ b/selectGame.html
@@ -48,14 +48,14 @@
                             <label class="font is-3 fontStyleMain">ชื่อเกมส์</label>
                         </center>
                     </div>
-                    <div class="column is-9 action" onclick="">
+                    <div class="column is-9 action" onclick="playMathGame()">
                         <div class="borderBox size-3">
                             <center>
-                                <img src="./resource/ห.png" alt="Smiley face" style="width: 80%;">
+                                <img src="./resource/math-logo.jpg" alt="Smiley face" style="width: 80%;">
                             </center>
                         </div>
                         <center>
-                            <label class="font is-3 fontStyleMain">ชื่อเกมส์</label>
+                            <label class="font is-3 fontStyleMain">ฝึกคิดเลข</label>
                         </center>
                     </div>
                 </div>
