add function gotomainGame

--- a/Question.html
+++ b/Question.html
@@ -109,7 +109,7 @@
                 <center>
                     <button id="choice4" class="button is-2 is-round is-orange" onclick="playQuestion()">
                         เล่นอีก</button>
-                    <button id="choice4" class="button is-2 is-round is-orange" onclick="">
+                    <button id="choice4" class="button is-2 is-round is-orange" onclick="goBabyGod()">
                         กลับหน้าหลัก</button>
                 </center>
             </div>
