--- a/Geometry.html
+++ b/Geometry.html
@@ -120,7 +120,7 @@
                                 <div class="col" style="background:#C58917">
                                     <div class="col-container">
                                         <div class="col" style="background:#E5E4E2">
-                                            <a href="play.html"><img src="./Geometry/pic/bottom_playAg.png" /></a>
+                                            <a href="Geometry.html"><img src="./Geometry/pic/bottom_playAg.png" /></a>
                                         </div>
                                     </div>
                                 </div>
